02-kubernetes/.manifest/2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-01-kubernetes-rewrite
  namespace: otus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: hw-01-kubernetes
                port:
                  number: 80
            pathType: Prefix
            path: /otusapp/nikita(/|$)(.*)
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-01-kubernetes
  namespace: otus
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: hw-01-kubernetes
                port:
                  number: 80
            pathType: Prefix
            path: /
